--- a/lm-compass_evaluation.ipynb
+++ b/lm-compass_evaluation.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "a23bfbd5",
    "metadata": {},
    "outputs": [
@@ -51,87 +51,132 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# %conda install -c conda-forge pandas notebook python-dotenv -y\n",
-    "# %pip install openai\n",
-    "\n",
     "from dotenv import load_dotenv\n",
     "from openai import AsyncOpenAI\n",
     "import os\n",
     "import asyncio\n",
     "import json\n",
+    "import pprint\n",
     "\n",
     "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "74acda0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROJECT_TITLE = \"LM Compass\"\n",
-    "SITE_URL = \"https://localhost:3000\"\n",
     "OPENROUTER_API_KEY = os.getenv(\"OPENROUTER_API_KEY\")\n",
-    "\n",
     "if not OPENROUTER_API_KEY:\n",
     "    raise ValueError(\"OPENROUTER_API_KEY not found in .env file or environment variables.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d9189a6d",
    "metadata": {},
    "outputs": [],
    "source": [
     "client = AsyncOpenAI(\n",
     "  base_url=\"https://openrouter.ai/api/v1\",\n",
-    "  api_key=OPENROUTER_API_KEY,\n",
-    "  default_headers={\n",
-    "    \"HTTP-Referer\": SITE_URL,\n",
-    "    \"X-Title\": PROJECT_TITLE,\n",
-    "  }\n",
+    "  api_key=OPENROUTER_API_KEY\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "43b00259",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Choose 2-4 models for initial response generation (See openrouter.ai for models)\n",
-    "candidate_models = [\n",
-    "    'openai/gpt-4o-mini',\n",
-    "    'anthropic/claude-3.5-sonnet',\n",
-    "    'tngtech/deepseek-r1t2-chimera:free'\n",
-    "    # Add or remove models as needed\n",
-    "]"
+    "candidate_models = {\n",
+    "    # Free Models\n",
+    "    \"MiniMax: MiniMax M2 (free)\"          : \"minimax/minimax-m2:free\",\n",
+    "    \"TNG: DeepSeek R1T2 Chimera (free)\"   : \"tngtech/deepseek-r1t2-chimera:free\",\n",
+    "    \"Meta: Llama 3.3 70B Instruct (free)\" : \"meta-llama/llama-3.3-70b-instruct:free\",\n",
+    "    \"OpenAI: gpt-oss-20b (free)\"          : \"openai/gpt-oss-20b:free\"\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "72eeda70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def query_model(model: str, query: str, role=\"user\"):\n",
+    "    try:\n",
+    "        response = await client.chat.completions.create(\n",
+    "            model=candidate_models[model],\n",
+    "            messages=[{\"role\" : role, \"content\" : query}],\n",
+    "            temperature=1\n",
+    "        )\n",
+    "        content = response.choices[0].message.content\n",
+    "        return candidate_models[model], content\n",
+    "    except Exception as e:\n",
+    "        return candidate_models[model], str(e)\n",
+    "\n",
+    "async def query_models(models: list[str], queries: list[str], role=\"user\"):\n",
+    "    coroutines = [query_model(models[i], queries[i], role=role) for i in range(len(models))]\n",
+    "    results = await asyncio.gather(*coroutines)\n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72eeda70",
+   "id": "2757c09d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('minimax/minimax-m2:free',\n",
+      "  'Green. That’s the color most people see because of chlorophyll, the pigment '\n",
+      "  'that reflects green light. Depending on lighting, season, or health, grass '\n",
+      "  'can look different—more yellow/brown if stressed or dry, or lighter/darker '\n",
+      "  'shades.'),\n",
+      " ('meta-llama/llama-3.3-70b-instruct:free',\n",
+      "  \"The color of grass is typically green! However, it's worth noting that the \"\n",
+      "  'exact shade of green can vary depending on factors such as the type of '\n",
+      "  'grass, the amount of sunlight it receives, and the time of year. Some '\n",
+      "  'grasses can also take on a more yellowish or brownish hue during times of '\n",
+      "  \"drought or when they're dormant. But in general, green is the color most \"\n",
+      "  'people associate with grass!')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_query = \"What color is grass?\"\n",
+    "models_to_use = [\"MiniMax: MiniMax M2 (free)\", \"Meta: Llama 3.3 70B Instruct (free)\"]\n",
+    "result = await query_models(models_to_use, [user_query]*len(models_to_use))\n",
+    "pprint.pprint(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "522a831a",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Example query\n",
-    "user_query = \"Explain the concept of quantum entanglement in simple terms for a high school student.\""
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "capstone-evaluation",
+   "display_name": "venv (3.14.0)",
    "language": "python",
    "name": "python3"
   },
@@ -145,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
