Added the cross evaluation querying

--- a/lm-compass_evaluation.ipynb
+++ b/lm-compass_evaluation.ipynb
@@ -41,21 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "a23bfbd5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "from openai import AsyncOpenAI\n",
@@ -69,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "74acda0b",
    "metadata": {},
    "outputs": [],
@@ -81,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d9189a6d",
    "metadata": {},
    "outputs": [],
@@ -94,11 +83,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "43b00259",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ALL AVALIABLE MODELS FOR TESTING\n",
+    "# *to add models, use the screen name for the model from OpenRouter as the key and\n",
+    "#  the actual name used in the api as the value\n",
+    "\n",
     "candidate_models = {\n",
     "    # Free Models\n",
     "    \"MiniMax: MiniMax M2 (free)\"          : \"minimax/minimax-m2:free\",\n",
@@ -110,12 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "72eeda70",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# QUERY FUNCTIONS\n",
+    "\n",
     "async def query_model(model: str, query: str, role=\"user\"):\n",
+    "    \"\"\"\n",
+    "    Queries a single model using the models in 'candidate_models'\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        response = await client.chat.completions.create(\n",
     "            model=candidate_models[model],\n",
@@ -123,11 +121,14 @@
     "            temperature=1\n",
     "        )\n",
     "        content = response.choices[0].message.content\n",
-    "        return candidate_models[model], content\n",
+    "        return model, content\n",
     "    except Exception as e:\n",
-    "        return candidate_models[model], str(e)\n",
+    "        return model, str(e)\n",
     "\n",
     "async def query_models(models: list[str], queries: list[str], role=\"user\"):\n",
+    "    \"\"\"\n",
+    "    Queries multiple models asychronously\n",
+    "    \"\"\"\n",
     "    coroutines = [query_model(models[i], queries[i], role=role) for i in range(len(models))]\n",
     "    results = await asyncio.gather(*coroutines)\n",
     "    return results"
@@ -138,29 +139,12 @@
    "execution_count": null,
    "id": "2757c09d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('minimax/minimax-m2:free',\n",
-      "  'Green. That’s the color most people see because of chlorophyll, the pigment '\n",
-      "  'that reflects green light. Depending on lighting, season, or health, grass '\n",
-      "  'can look different—more yellow/brown if stressed or dry, or lighter/darker '\n",
-      "  'shades.'),\n",
-      " ('meta-llama/llama-3.3-70b-instruct:free',\n",
-      "  \"The color of grass is typically green! However, it's worth noting that the \"\n",
-      "  'exact shade of green can vary depending on factors such as the type of '\n",
-      "  'grass, the amount of sunlight it receives, and the time of year. Some '\n",
-      "  'grasses can also take on a more yellowish or brownish hue during times of '\n",
-      "  \"drought or when they're dormant. But in general, green is the color most \"\n",
-      "  'people associate with grass!')]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# QUERY EACH MODEL FOR THEIR ANSWER TO THE USER PROMPT\n",
+    "\n",
     "user_query = \"What color is grass?\"\n",
-    "models_to_use = [\"MiniMax: MiniMax M2 (free)\", \"Meta: Llama 3.3 70B Instruct (free)\"]\n",
+    "models_to_use = [\"MiniMax: MiniMax M2 (free)\", \"Meta: Llama 3.3 70B Instruct (free)\", \"TNG: DeepSeek R1T2 Chimera (free)\"]\n",
     "result = await query_models(models_to_use, [user_query]*len(models_to_use))\n",
     "pprint.pprint(result)"
    ]
@@ -171,7 +155,36 @@
    "id": "522a831a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# BUILDING THE QUERIES FOR EACH MODEL TO EVALUATE EACH OTHER\n",
+    "\n",
+    "scoring_query = lambda answer : f\"\"\"\\\n",
+    "Question: {user_query}\n",
+    "Answer: {answer}\n",
+    "\n",
+    "Please rate the answer to the question and give it a score between 0 and 100. End your output with just the score on a new line.\\\n",
+    "\"\"\"\n",
+    "\n",
+    "new_models_to_use = []\n",
+    "new_queries_to_use = []\n",
+    "for model1 in models_to_use:\n",
+    "    for model2, answer in result:\n",
+    "        if model1 != model2:\n",
+    "            new_models_to_use.append(model1)\n",
+    "            new_queries_to_use.append(scoring_query(answer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d740aac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# QUERY EACH MODEL TO EVALUATE EACH OTHER MODEL'S ANSWER\n",
+    "\n",
+    "scoring_results = await query_models(new_models_to_use, new_queries_to_use)"
+   ]
   }
  ],
  "metadata": {
