Added Prompt based scoring

--- a/lm-compass_evaluation.ipynb
+++ b/lm-compass_evaluation.ipynb
@@ -41,24 +41,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a23bfbd5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "from openai import AsyncOpenAI\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "import os\n",
     "import asyncio\n",
-    "import json\n",
-    "import pprint\n",
+    "import re\n",
     "\n",
     "load_dotenv()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "74acda0b",
    "metadata": {},
    "outputs": [],
@@ -70,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d9189a6d",
    "metadata": {},
    "outputs": [],
@@ -83,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "43b00259",
    "metadata": {},
    "outputs": [],
@@ -103,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "72eeda70",
    "metadata": {},
    "outputs": [],
@@ -135,23 +147,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3f0fe820",
+   "metadata": {},
+   "source": [
+    "## PROMPT BASED SCORING"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2757c09d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# QUERY EACH MODEL FOR THEIR ANSWER TO THE USER PROMPT\n",
     "\n",
-    "user_query = \"What color is grass?\"\n",
+    "user_query = \"Please, concisely explain the pythagorean theorm.\"\n",
     "models_to_use = [\"MiniMax: MiniMax M2 (free)\", \"Meta: Llama 3.3 70B Instruct (free)\", \"TNG: DeepSeek R1T2 Chimera (free)\"]\n",
-    "result = await query_models(models_to_use, [user_query]*len(models_to_use))\n",
-    "pprint.pprint(result)"
+    "result = await query_models(models_to_use, [user_query]*len(models_to_use))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "522a831a",
    "metadata": {},
    "outputs": [],
@@ -159,24 +178,33 @@
     "# BUILDING THE QUERIES FOR EACH MODEL TO EVALUATE EACH OTHER\n",
     "\n",
     "scoring_query = lambda answer : f\"\"\"\\\n",
-    "Question: {user_query}\n",
-    "Answer: {answer}\n",
+    "QUESTION:\n",
+    "{user_query}\n",
     "\n",
-    "Please rate the answer to the question and give it a score between 0 and 100. End your output with just the score on a new line.\\\n",
+    "ANSWER:\n",
+    "{answer}\n",
+    "\n",
+    "\n",
+    "\n",
+    "Please rate the answer to the question, on a scale of 0-5, based on factual accuracy (out of 5), completeness (out of 5), and clarity (out of 5). \\\n",
+    "Please explain your reasoning, mentioning things done well and things not done well. \\\n",
+    "Finally, please output the sum of scores with the score tag e.g. <score>12</score>\\\n",
     "\"\"\"\n",
     "\n",
     "new_models_to_use = []\n",
     "new_queries_to_use = []\n",
+    "models_being_evaluated = []\n",
     "for model1 in models_to_use:\n",
     "    for model2, answer in result:\n",
     "        if model1 != model2:\n",
     "            new_models_to_use.append(model1)\n",
-    "            new_queries_to_use.append(scoring_query(answer))"
+    "            new_queries_to_use.append(scoring_query(answer))\n",
+    "            models_being_evaluated.append(model2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1d740aac",
    "metadata": {},
    "outputs": [],
@@ -185,6 +213,105 @@
     "\n",
     "scoring_results = await query_models(new_models_to_use, new_queries_to_use)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d5899dc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MiniMax: MiniMax M2 (free)</th>\n",
+       "      <th>Meta: Llama 3.3 70B Instruct (free)</th>\n",
+       "      <th>TNG: DeepSeek R1T2 Chimera (free)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MiniMax: MiniMax M2 (free)</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Meta: Llama 3.3 70B Instruct (free)</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TNG: DeepSeek R1T2 Chimera (free)</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                     MiniMax: MiniMax M2 (free)  \\\n",
+       "MiniMax: MiniMax M2 (free)                                  NaN   \n",
+       "Meta: Llama 3.3 70B Instruct (free)                        12.0   \n",
+       "TNG: DeepSeek R1T2 Chimera (free)                          12.0   \n",
+       "\n",
+       "                                     Meta: Llama 3.3 70B Instruct (free)  \\\n",
+       "MiniMax: MiniMax M2 (free)                                          14.0   \n",
+       "Meta: Llama 3.3 70B Instruct (free)                                  NaN   \n",
+       "TNG: DeepSeek R1T2 Chimera (free)                                   14.0   \n",
+       "\n",
+       "                                     TNG: DeepSeek R1T2 Chimera (free)  \n",
+       "MiniMax: MiniMax M2 (free)                                        15.0  \n",
+       "Meta: Llama 3.3 70B Instruct (free)                               14.0  \n",
+       "TNG: DeepSeek R1T2 Chimera (free)                                  NaN  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# BUILD RUBRIC FROM MODELS EVALUATIONS OF EACH OTHER\n",
+    "\n",
+    "rubric = pd.DataFrame(np.nan, index=models_to_use, columns=models_to_use)\n",
+    "i = 0\n",
+    "for model1 in models_to_use:\n",
+    "    for model2 in models_to_use:\n",
+    "        if model1 != model2:\n",
+    "            score = re.search(r\"<score>(\\d+)</score>\", scoring_results[i][1])\n",
+    "            rubric[model1][model2] = int(score.group(1))\n",
+    "            i += 1\n",
+    "rubric"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba489894",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
