updated prompt; fixed for loop

--- a/eval-notebooks/rationale_based_self_critique_loop.ipynb
+++ b/eval-notebooks/rationale_based_self_critique_loop.ipynb
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "e5deb2f4",
       "metadata": {},
       "outputs": [],
@@ -82,8 +82,6 @@
         "\n",
         "        2. Revision: After your critique, output your revised evaluation as a single JSON object. You must end your response with exactly one line that is only this JSON object (no other text on that line):\n",
         "        {{\"reasoning\": \"<one-sentence revised justification referencing rubric>\", \"score\": <integer 0-100>}}\n",
-        "\n",
-        "        Apply the rubric strictly. Correctness & Accuracy has the highest impact on the overall score.\n",
         "        \"\"\")\n",
         "\n",
         "    async def _critique_rationale(self, user_query, rubric):\n",
@@ -128,12 +126,12 @@
         "                entry[\"score\"] = round_data[i][\"after_score\"]\n",
         "                entry[\"reasoning\"] = round_data[i][\"after_reasoning\"]\n",
         "\n",
-        "    async def evaluate(self, user_query, rubric, iterations=2):\n",
+        "    async def evaluate(self, user_query, rubric, iterations=1):\n",
         "        self.critique_history = []\n",
         "        # Step 1: Initial evaluation (populates user_query_answers and evaluation_query_answers)\n",
         "        await self.n_sq_evaluate(user_query, rubric)\n",
         "        # Step 2: Refine via critique-and-revision (iterations - 1 rounds)\n",
-        "        for _ in range(iterations - 1):\n",
+        "        for _ in range(iterations):\n",
         "            await self._critique_rationale(user_query, rubric)"
       ]
     },
